# hipchat-client

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  New-Documentation.ps1  README.md  example.settings.json  index.html  search-index.js
docs/: index.html  search-index.js
docs/hipchat_client/: index.html
hipchat_client/: index.html  sidebar-items.js
hipchat_client/client/: index.html  struct.Client.html
hipchat_client/emoticon/: index.html  sidebar-items.js  struct.Emoticon.html
hipchat_client/error/: enum.Error.html  index.html
hipchat_client/message/: enum.Color.html  enum.MessageFormat.html  enum.MessageType.html  index.html  sidebar-items.js  struct.Message.html  struct.MessageDetailLinks.html  struct.MessageFile.html  struct.Messages.html  struct.MessagesRequest.html
hipchat_client/room/: index.html  sidebar-items.js  struct.Notification.html  struct.Room.html  struct.RoomDetail.html  struct.RoomDetailLinks.html  struct.RoomDetailOwner.html  struct.RoomDetailOwnerLinks.html  struct.RoomDetailStatistics.html  struct.RoomDetailStatisticsLinks.html  struct.RoomUpdate.html  struct.RoomUpdateOwner.html  struct.Rooms.html  struct.RoomsLinks.html  struct.RoomsRequest.html
hipchat_client/user/: index.html  struct.User.html  struct.UserClient.html  struct.UserDetail.html  struct.UserDetailLinks.html  struct.UserMessage.html  struct.UserPresence.html  struct.Users.html  struct.UsersLinks.html  struct.UsersRequest.html
hipchat_client/util/: index.html  (+2 more)
src/: client.rs  emoticon.rs  error.rs  lib.rs  message.rs  room.rs  user.rs  util.rs
tests/: lib.rs
(+113 files in other folders)
