[package]
name = "hipchat-client"
version = "0.1.0"
authors = ["Ray Solomon <raybsolomon@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rsolomo/hipchat-client"
homepage = "https://github.com/rsolomo/hipchat-client"
description = "An API client library for HipChat"

[dependencies]
rustc-serialize = "*"
hyper = "*"
url = "*"
