[package]
name = "hipchat-client"
version = "0.1.1"
authors = ["Ray Solomon <raybsolomon@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rsolomo/hipchat-client"
homepage = "https://github.com/rsolomo/hipchat-client"
description = "An API client library for HipChat"
keywords = ["hipchat"]

[dependencies]
rustc-serialize = "0.3"
hyper = "0.7"
url = "0.5"
